<resources>
    <string name="app_name">Digital Akshara</string>
    <string name="version_name">
        <font color="#3b68b1" size="10">Version 1.0</font>
    </string>
    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>
    <string name="demo_min_label"></string>
    <string name="demo_max_label"></string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="skip_str">Skip</string>
    <string name="start">GOT IT</string>
    <string name="passwordValidation">Contain at least 1 special character from ! @ # $ % ^ &amp; * ( ) _ + [ ] { }
    </string>
    <string name="player_error">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="ic_search">
        <font size="15">Search a celebrity</font>
    </string>
    <string name="search_draft">
        <font size="15">Search a draft</font>
    </string>
    <string name="manager_search">
        <font size="15">Search a manager</font>
    </string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="todays_event">Todays Events</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="edittext_hint">
        <font size="10">Write your comments</font>
    </string>
    <string name="feed_edit_hint">
        <font size="10">Add a Caption</font>
    </string>
    <string name="changepasowrd_newpassword">
        <font size="15">New Password</font>
    </string>
    <string name="changepasowrd_confirmpassword">
        <font size="15">Confirm Password</font>
    </string>
    <string name="media_upload_text">
        <font size="8">Enter Text Here</font>
    </string>
    <string name="chatcredit">
        <b>Credit(s)</b>
    </string>
    <string name="exdate">
        <font size="10">Expiry Month</font>
    </string>
    <string name="exmonth">
        <font size="10">Expiry Year</font>
    </string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear
        data
    </string>
    <string name="play_again">Play Again</string>
    <string name="username">User Name</string>
    <string name="referal">Referral Code (Optional)</string>
    <string name="email_address">E-Mail Id</string>
    <string name="email">Email</string>
    <string name="emailormobile">Email/Mobile</string>
    <string name="mobile">Phone Number</string>
    <string name="password">Password</string>
    <string name="signin">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signinnow">Sign In Now</string>
    <string name="home">Home</string>
    <string name="quickpostt">Sign In Now</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="already_register">Already have an account?</string>
    <string name="professional">From for all your professional and \npersonal designs</string>
    <string name="signup_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="signup_twitter">SIGN UP WITH TWITTER</string>
    <string name="signup_email">SIGN UP WITH EMAIL</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">Ccr6kPhB0eSCrBVn1j2LF57vN</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">3Ye7D8kQxzpXBZcWI2xJRYUoo1ZEHe8MP0lXbLz10xJzT09tvK</string>
    <string name="facebook_app_id">2010537322500421</string>
    <string name="fb_login_protocol_scheme">fb2010537322500421</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="myfeed">My Feed</string>
    <string name="myprofile">My Profile</string>
    <string name="myschedule">My Schedules</string>
    <string name="create_event">Create Event</string>
    <string name="my_collections">My Collections</string>
    <string name="auctions">Auctions</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="manage_my_orders">Manage My Orders</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="manager_settings">Manager Settings</string>
    <string name="my_reports">My Reports</string>
    <string name="credits">Credits</string>
    <string name="charity">Charity System</string>
    <string name="available">Recommended Celebrities</string>
    <string name="select_preference">Select Your Preferences</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="Getcredits">Get credits to become a fan / follower and konect with your favourite Celebs</string>
    <string name="konect_with_credits">Konect with Credits</string>
    <string name="no_schedule">Presently you are not having any schedule please Schedule in Calender</string>
    <string name="title_activity_maps">Map</string>
    <string name="place_details">
        <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="my_celebs">Followers</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">
        <u>Login?</u>
    </string>
    <string name="also_signup">Also Sign In</string>
    <string name="konect_with">Konect with</string>
    <string name="konect_with_celeb">Konect with Celeb</string>
    <string name="new_user">New User</string>
    <string name="signup_underline">Sign Up ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="done">Done</string>
    <string name="my_prefrences">My Preferences</string>
    <string name="history">My History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="myprofilesc">My Profile</string>
    <string name="location">Location</string>
    <string name="dob">Birthday</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="quickpost">Quick Content</string>
    <string name="submit">Submit</string>
    <string name="proceedlogin">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="selected_celeb_profile">Celeb Profile</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.
    </string>
    <string name="settings">Settings</string>
    <string name="call_availability_time">Your Call Schedule on Monday,\n15-02-2018, at 10.00 am.\n Duration :15 Min.
    </string>
    <string name="host">18.217.102.209</string>
    <string name="port">3000</string>
    <string name="logout">Logout</string>
    <string name="changepassword">Change Password</string>
    <string name="pleasewaitt">Please wait while we connect</string>
    <string name="step">Step</string>
    <string name="konect">Konect With Celebrity</string>
    <string name="currentcredits">Current Credits</string>
    <string name="viewall">View All</string>
    <string name="offline">Offline</string>
    <string name="title">Title</string>
    <string name="something">Share Something Interesting ..!</string>
    <string name="title_activity_media_post">MediaPostActivity</string>
    <string name="quick_content">Quick Content</string>
    <string name="media_content">Media Content</string>
    <string name="nowonline">Now Online</string>
    <string name="trendingactress">Trending</string>
    <string name="editor_celeb">Editor\'s Choice</string>
    <string name="recomended_celeb">Recommended</string>
    <string name="hidepost">Hide this post</string>
    <string name="reportpost">Report post</string>
    <string name="hiddenpost">Hidden post</string>
    <string name="hideyoupost">You have hide this post.</string>
    <string name="undostr">Undo</string>
    <string name="Auditions">Auditions
        <sup>
            <small>
                <font color="red">New</font>
            </small>
        </sup>
        "
    </string>
    <string name="premium_content">Premium Content</string>
    <string name="title_activity_my_cart">MyCart</string>
    <string name="trendingcricket">Trending Cricket Stars</string>
    <string name="promotedactress">Recommended</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="set_time">Service Timing</string>
    <string name="set_credit">Service Charges</string>
    <string name="min_time">Minimum Call Duration</string>
    <string name="break_time">Break Time</string>
    <string name="save">Save</string>
    <string name="proceed">Proceed</string>
    <string name="from_date">Date</string>
    <string name="to_date">Date</string>
    <string name="time">Time</string>
    <string name="live_time">Live Status</string>
    <string name="product_type">T-Shirt</string>
    <string name="product_brand">Zara</string>
    <string name="size">Size :</string>
    <string name="qty">Qty :</string>
    <string name="order">Order</string>
    <string name="order_date">Order Date :</string>
    <string name="order_total">Order Total :</string>
    <string name="order_code">Order # :</string>
    <string name="product_details">Product Details</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="delivery_estimate">Delivery Estimate : 18 Mar 2018 by 8.00 P.M</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="billing_address">Billing Address</string>
    <string name="address_details">1250, Road No:62, Hyderabad, Telangana.</string>
    <string name="order_summary">Order Summary</string>
    <string name="item_cost">Item Cost :</string>
    <string name="postage_packing">Postage and Packing :</string>
    <string name="duration">Duration :</string>
    <string name="quickcontent">Quick Content</string>
    <string name="newposter">New Poster in Coffee Louge</string>
    <string name="posted">Posted on 12-03-18</string>
    <string name="settings_name" translatable="false">AppRTC Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="profile_audi">Profile</string>
    <string name="professional_info">Professional info</string>
    <string name="media_audi">Media</string>
</resources>