<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/sliderlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="450dp"
        android:visibility="gone"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/five"
                android:layout_marginRight="@dimen/five"
                android:visibility="gone">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <TextView
                android:id="@+id/slidecounttxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twenty"
                android:text="@string/step"
                android:textColor="@color/skyblue"
                android:textSize="@dimen/twenty" />

            <TextView
                android:id="@+id/celebConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/konect"
                android:textColor="@color/skyblue"
                android:textSize="@dimen/twenty" />

            <RelativeLayout
                android:id="@+id/bottomdata"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_skip"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@null"
                    android:text="@string/skip"
                    android:textColor="@color/skyblue" />


                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:text="@string/next"
                    android:textColor="@color/skyblue" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/insert_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/skiptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="40dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="@string/skip_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fifteen"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>