<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/managerBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout_liveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarheader"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView_liveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/myschedule"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/textView_thisWeek"
                android:text="@string/today"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView_thisWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toLeftOf="@+id/textView_thisMonth"
                android:text="@string/this_week"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView_thisMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:text="@string/this_month"
                android:textColor="@color/black" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/relativeLayout_liveTime"
            android:layout_margin="10dp"
            android:background="@color/divider"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">


            <TextView
                android:id="@+id/textView_slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/todays_event"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/bg_screen3"
                android:padding="@dimen/_5sdp"
                android:text="100"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <RelativeLayout
            android:id="@+id/layout_recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_horizontal">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_my_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="none" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_schedules"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:alpha="0.5"
            app:srcCompat="@drawable/ic_no_data"
            android:visibility="visible" />

        <TextView
            android:id="@+id/nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="No Schedules"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>
