<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/profileheadingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:descendantFocusability="beforeDescendants"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilecmplticon"
                android:layout_width="@dimen/_18sdp"
                android:clickable="false"

                android:layout_height="@dimen/_18sdp"
                android:background="@drawable/actorflagicon" />

            <TextView
                android:id="@+id/profiletitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/profile_audi"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/professionLayout"
            android:layout_weight="1.4"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/professionalcmplticon"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="@drawable/ic_tick_inside_a_circle" />

            <TextView
                android:id="@+id/professiontitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/professional_info"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mediaheadingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mediainfoico"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:background="@drawable/ic_tick_inside_a_circle" />

            <TextView
                android:id="@+id/mediatitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/media_audi"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal|bold" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>